// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Login User Controller Snapshot Test delete expired unverified user 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Login User Controller Snapshot Test for blocked user. 1`] = `
{
  "body": {
    "message": "Your account is blocked. Please contact support.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Login User Controller Snapshot Test for empty request body. 1`] = `
{
  "body": {
    "message": "Request body is required",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Login User Controller Snapshot Test for incorrect password. 1`] = `
{
  "body": {
    "message": "The password you entered is incorrect.",
    "success": false,
  },
  "status": 401,
}
`;

exports[`Login User Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Login User Controller Snapshot Test for missing password. 1`] = `
{
  "body": {
    "message": "Both username and password are required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Login User Controller Snapshot Test for missing username. 1`] = `
{
  "body": {
    "message": "Both username and password are required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Login User Controller Snapshot Test for successful login. 1`] = `
{
  "body": {
    "data": {
      "_id": "507f1f77bcf86cd799439011",
      "email": "test@gmail.com",
      "emailVerified": true,
      "fullName": "User Test",
      "isActive": true,
      "username": "test",
    },
    "message": "User logged in successfully.",
    "success": true,
    "token": "mocked-jwt-token",
  },
  "status": 200,
}
`;

exports[`Login User Controller Snapshot Test for unverified email but not expired. 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "User Test",
      "userId": "507f1f77bcf86cd799439011",
    },
    "message": "Please verify your email.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Login User Controller Snapshot Test for user not exist. 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;
